scrollbar fixes

--- a/css/right.css
+++ b/css/right.css
@@ -18,24 +18,32 @@
     height: 75vh;
     width: 72vw;
     border-radius: 10px;
-    overflow: hidden;            
-    overflow-y: auto;       /* Vertical scroll */
+    /* overflow: hidden;             */
+        /* Vertical scroll */
 }
 
-.right::-webkit-scrollbar {
+
+/* Sptotify Playlists */
+.spotifyPlaylists{
+    height: 63vh;
+    overflow: hidden;
+    overflow-y: auto;
+}
+
+.spotifyPlaylists::-webkit-scrollbar {
     /* display: none;         Hides the  vertical scrollbar in this container */
     width : 12px;
 }
 
-.right::-webkit-scrollbar-thumb{
+.spotifyPlaylists::-webkit-scrollbar-thumb{
     background-color: #333;
     border-radius: 6px;
 }
 
-/* Sptotify Playlists */
 .cardContainer{
     overflow-x: auto;     /* Horizontal scroll */
     width: 72vw;
+    height: 40vh;
     justify-content: space-evenly;
     position: relative;
 }
@@ -139,33 +147,42 @@
 
 /* footer styling */
 .footer{
-    margin :2px;
-    margin-top: auto;
-    padding: 2px;
+    /* margin :2px;
+    padding: 2px; */
     flex-direction: column;
     justify-content: center;
     align-items: center;
     position: absolute;
-    height: 5vh;
-    width: 69vw;
     bottom: 0;
+    left: 25vw;
+    height: 6vh;
+    width: 72vw;
+    /* background-color: black; */
 }
 
 .footer-left{
-    margin: var(--margin);
-    padding: var(--padding);
+    /* margin: var(--margin);
+    padding: var(--padding); */
     justify-content: left;
     align-items: center;
     position: absolute;
     left: 2vw;
-    height: 10vh;
-    width: 35vw;
+    bottom: 0px;
+    top: 1vh;
+    height: 6vh;
+    width: 40vw;
     border-radius: 10px;
+    text-decoration-line: none;
 }
 
-.footer-left p{
+.footer-left span{
     margin: var(--margin);
     padding: 3px;
+    color: white;
+}
+
+.footer-left a{
+    text-decoration-line: none;
 }
 
 .footer-right{
@@ -175,6 +192,8 @@
     align-items: center;
     position: absolute;
     right: 1vw;
+    top: 2vh;
+    bottom: 0px;
 }
 
 .footer-right p{
